Fix common item image stretching

--- a/src/containers/Common/components/CommonListContainer/CommonListItem/index.scss
+++ b/src/containers/Common/components/CommonListContainer/CommonListItem/index.scss
@@ -39,7 +39,7 @@
       bottom: 0;
       width: 100%;
       height: 100%;
-      object-fit: fill;
+      object-fit: cover;
       border-radius: 24px 24px 0 0;
       background-color: $purple;
     }
